--- a/src/components/layout/Layout.module.scss
+++ b/src/components/layout/Layout.module.scss
@@ -70,3 +70,19 @@
         }
     }
 }
+
+@media only screen and (max-width: 900px) {
+  .container {
+    .inner {
+      .info {
+        display: none;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .container {
+    padding: 0;
+  }
+}
